# Cours-Sorbonne-Imad

./: CMakeLists.txt  README.md
S1,2,3/info 2/L2/: exercice2.c
S1,2,3/info 2/L2/TME-3-4-5/: biblioLC.c  main.c  makefile
S1,2,3/info 2/L2/TME-6-11/: chaine
S1,2,3/info 2/td/: td_semaine_2.c  tdsemaine2
S1,2,3/info 2/tme/semaine1/: Exercice 5.c  Exercice 7  Exercice 8.c  hello  jeuTest.c
S1,2,3/info 2/tme/semaine2/: Exercice 14  exemple_graphique.c
S1,2,3/info 2/tme/semaine3/: Exercice 16.c  Exercice 19.c  Exercice 20.c  a.out  min_max_moy.c
S1,2,3/info 2/tme/semaine4/: Exercice 23.c  Exercice 24.c
S1,2,3/info 2/tme/semaine5/: Exercice 28.c  Exercice 30.c  Exercice 32.c  a.out
S1,2,3/info 2/tme/semaine7/: Tetris1.c
S1,2,3/info 2/tme/semaine8/: liste_entiers.c  liste_entiers.h  test_liste  test_liste.c
S1,2,3/info 2/tme/semaine9-10/: ensemble  ensembles  multi_ensembles.c  multi_ensembles.h  test_multi_ensembles.c
S1,2,3/info 2/tme/test/: a.out
S4/Java/TD 01/Exercice 07/: Villageois.java
S4/Java/TD 01/Exercice 08/: Lettre.java
S4/Java/TD 02/Exercice 13/: AdresseWeb.java
S4/Java/TD 02/Exercice 14/: Complexe.java  Coureur.java  TestCoureur.java
S4/Java/TD 02/Exercice 15/: Complexe.java
S4/Java/TD1/: Bonjour.java  TestSegment.java  Villageois.java
S4/Java/TP 01/Exercice 06/: Segment.java
S4/Java/TP 01/Exercice 07/: TestVillageois.java
S4/Java/TP 01/Exercice 08/: TestLettre.java
S4/Java/TP 02/Exercice 13/: TestAdresseWeb.java
S4/Java/TP 02/Exercice 15/: TestComplexe.java
S4/Java/TP 03/Exercice 19/: Cabine.java  Roue.java  TestTracteur.java  Tracteur.java
S4/Java/TP 03/Exercice 20/: Point.java  TestTriangle.java  Triangle.java
S4/Java/TP 03/Exercice 21/: Personne.java  TestPersonne.java
S4/Java/TP 04/Exercice 26/: TestTableauMain.java
S4/Java/TP 04/Exercice 27/: TestVectN.java  VectN.java
S4/Java/TP 04/Exercice 28/: Assiette.java  Pile.java  TestPile.java
S4/Java/TP 04/Exercice 35/: Cone.java  (+1 more)
are dynamique/: Schelling.ipynb  zs.py
info 2/: helloworld.c
info 2/L2/: exercice2.c  exo1-tme.jff  exo2-tme.jff  exo3-tme.jff
info 2/L2/006/TME-06/Ressources/: CMakeLists.txt  Chaine.c  Chaine.h  ReconstitueReseau.c  Reseau.h  makefile
info 2/L2/006/TME-06/Ressources/Ressources/: exercice1.c
info 2/L2/TME-3-4-5/: biblioLC.c  biblioLC.h  entreeSortieLC.c  entreeSortieLC.h  main  main.c
info 2/L2/TME-6-11/: Chaine.c
info 2/semaine1/: Exercice 5  Exercice 7.c  Exercice 8  Exercice 8.c  jeuTest
info 2/tme/semaine1/: Exercice 5  Exercice 5.c  Exercice 8  Exercice 8.c
info 2/tme/semaine2/: Exercice 11.c  Exercice 14.c  Exercice11.c  a.out
info 2/tme/semaine3/: Exercice 18.c  Exercice 19.c  Exercice 20.c  pnz.c
info 2/tme/semaine4/: Exercice 23.c  Exercice 24.c  Exercice 26.c  a.out
info 2/tme/semaine5/: Exercice 27.c  Exercice 30.c  a.out
info 2/tme/semaine6/: Exercice 32.c  a.out
info 2/tme/semaine7/: a.out  planetes.c
info 2/tme/semaine9/: ensembles  multi_ensembles.c  multi_ensembles.h  test_multi_ensembles.c
info 2/tme/test/: test.c
(+9 files in other folders)
